	* check_ssl_cert: allow backslashes escaped in the error messages (e.g., for \n used by Nagios 3)
	* check_ssl_cert: -r can be used to specify a root certificate to be used for the verification

2009-03-31  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: standard timeout of 15 seconds (can be set with the -t option)

2009-03-30  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: -P option to specify the protocol

2008-05-13  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: applied a patch fom Dan Wallis to output the CN
                          in all the messages

2008-02-28  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: shortened the error message in case of no connection
	                  (only the first line is reported)

2008-02-25  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: [Dan Wallis patch] removed nmap dependency
	* check_ssl_cert: [Dan Wallis patch] mktemp for the temporaries
	* check_ssl_cert: [Dan Wallis patch] using trap to cleanup temporaries
	* check_ssl_cert: [Dan Wallis patch] POSIX compliance and cleanup
	* check_ssl_cert: [Dan Wallis patch] POSIX compliance and cleanup
	* check_ssl_cert: [Dan Wallis patch] better handling of missing
	                                     certificate and non resolvable host
	* check_ssl_cert: [Dan Wallis patch] stricter check for "notAfter" in the
	                                     certificate analysis

2007-09-04  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: better error messages (both the actual and the
	expected values are displayed)

2007-08-31  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: new options to enforce email and
	organization. Temporary files are now removed before termination

2007-08-15  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: openssl s_client closes the connection cleanly

2007-08-10  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_ssl_cert: initial release
